2009-03-24  Bruno coudoin  <bruno.coudoin@free.fr>

	- Replaced a level in memory sound to make the difficulty always increasing
	  Merged from trunk 3790

	* src/boards/memory.c: (start_board):
	* boards/voices/*: normalized sounds.

2009-03-20  Bruno coudoin  <bruno.coudoin@free.fr>

	- Reverted a commit in which Bruno broke the saving of the content.txt
	  file.
	  merged from trunk r3786

	* src/gcompris/gc_net.c: (gc_cache_init), (gc_cache_get_relative),
	(gc_cache_add), (gc_cache_import_pixmap), (gc_cache_remove),
	(_table_foreach), (gc_cache_save), (gc_cache_destroy):

2009-03-17  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a little issue. It was possible for the user in
	  memory sound against tux to click on as many card she wants
	  if she does not wait for the end of the sound.
	  merged from trunk 3782

	* src/boards/memory.c: (memory_next_level), (check_win),
	(item_event):

2009-03-16  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed melody activity, some sound files was not correct which
	made it sometimes imposible to complete.
	merged from trunk 3779

	* src/boards/memory.c:

2009-03-15  Bruno Coudoin  <bruno.coudoin@free.fr>

	- Replaced letter that differenciate blocks for
	  color blinds by ASCII symbols that are locale
	  agnostic.
	  merged from trunk 3775

	* src/boards/hanoi.c: (hanoi_create_item):

2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Recompiled gnuchess on windows with the link option
	-mwindows to avoid the black dos windows being displayed when
	you start the chess game.

	* Makefile.mingw.in:

2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed an annoying bug in the locale selection.
	  Punjabi was twice in our internal list which makes
	  it impossible to access locale after Portuguese in
	  our list. It was possible to access locale by going
	  backward but really annoying.
	  Merged from trunk 3771

	* src/gcompris/config.c:

2009-03-12  Bruno coudoin  <bruno.coudoin@free.fr>
